--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,16 +23,10 @@ services:
       dockerfile: src/services/receiver/Dockerfile
     environment:
       - REDIS_URL=redis://redis:6379
-      - TZ=UTC
-      - POSTGRES_HOST=postgres  # Add PostgreSQL connection info
-      - POSTGRES_PORT=5432
-      - POSTGRES_DB=trading
     volumes:
       - ./data:/app/data
     depends_on:
       redis:
-        condition: service_healthy
-      postgres:
         condition: service_healthy
     secrets:
       - source: deribit_client_id
@@ -45,29 +39,24 @@ services:
       test: ["CMD", "redis-cli", "-h", "redis", "ping"]
       interval: 30s
 
-  executor:
+  distributor:
     build:
       context: .
-      dockerfile: src/services/executor/Dockerfile
+      dockerfile: src/services/distributor/Dockerfile
     environment:
       - REDIS_URL=redis://redis:6379
       - TZ=UTC
       - POSTGRES_HOST=postgres  # Add PostgreSQL connection info
       - POSTGRES_PORT=5432
       - POSTGRES_DB=trading
-    volumes:
-      - ./data:/app/data
+    secrets:
+      - source: db_password  # Add DB password secret
+        target: db_password
     depends_on:
       redis:
         condition: service_healthy
       postgres:
         condition: service_healthy
-    secrets:
-      - source: deribit_client_id
-        target: deribit_client_id
-      - source: deribit_client_secret
-        target: deribit_client_secret
-      - source: db_password  # Add DB password secret
     restart: unless-stopped
 
   postgres:
