--- a/src/services/distributor/Dockerfile
+++ b/src/services/distributor/Dockerfile
@@ -38,9 +38,11 @@ COPY --from=builder --chown=1000:1000 ${UV_VENV} ${UV_VENV}
 
 # Copy application files
 WORKDIR /app
-COPY --chown=1000:1000 ./src ./src
-COPY --chown=1000:1000 ./config ./config
-COPY --chown=1000:1000 ./core ./core
+# Copy entire project
+COPY . .  
+#COPY --chown=1000:1000 ./src ./src
+#COPY --chown=1000:1000 ./config ./config
+#COPY --chown=1000:1000 ./core ./core
 
 # Environment variables
 ENV DB_BASE_PATH=/app/data \
