--- a/src/services/receiver/docker-compose.yml
+++ b/src/services/receiver/docker-compose.yml
@@ -37,11 +37,11 @@ services:
         target: deribit_client_id
       - source: deribit_client_secret
         target: deribit_client_secret
-      - source: db_password  # Add DB password secret
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "redis-cli", "-h", "redis", "ping"]
+      test: ["CMD", "python", "-c", "import src.services.receiver.deribit.main"]
       interval: 30s
+      timeout: 5s
 
 volumes:
   redis-data:
