--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,7 @@ services:
       interval: 30s
 
   distributor:
+    profiles: ["distributor"]
     build:
       context: .
       dockerfile: src/services/distributor/Dockerfile
