--- a/src/services/distributor/Dockerfile
+++ b/src/services/distributor/Dockerfile
@@ -12,6 +12,7 @@ FROM base AS builder
 WORKDIR /build
 
 # Copy application files
+COPY pyproject.toml .
 COPY src/shared/ src/shared/
 COPY src/services/distributor/ src/services/distributor/
 
@@ -46,7 +47,9 @@ COPY --chown=1000:1000 ./core ./core
 ENV DB_BASE_PATH=/app/data \
     PYTHONPATH=/app \
     PYTHONUNBUFFERED=1 \
-    PYTHONPYCACHEPREFIX=/tmp/.pycache
+    PYTHONPYCACHEPREFIX=/tmp/.pycache\
+    STRATEGY_CONFIG_PATH=/app/config/shared/strategies.toml
+
 
 USER 1000
 CMD ["python", "src/services/distributor/deribit/main.py"]
