--- a/src/shared/pyproject.toml
+++ b/src/shared/pyproject.toml
@@ -3,14 +3,15 @@
 name = "shared"
 version = "1.0.0"
 dependencies = [
-    "orjson==3.10.18",
-    "redis>=5.0.0,<6.0.0",
     "aiohttp==3.12.7",
     "aiosqlite>=0.20.0,<1.0.0",
     "asyncpg==0.30.0",
-    "python-dotenv>=1.0.0,<2.0.0",
-    "loguru>=0.7.0,<1.0.0",
     "dataclassy",
+    "loguru>=0.7.0,<1.0.0",
+    "orjson==3.10.18",
+    "redis>=5.0.0,<6.0.0",
+    "pydantic",
+    "python-dotenv>=1.0.0,<2.0.0",
     "tomli==2.0.0",
 ]
 
