--- a/src/shared/pyproject.toml
+++ b/src/shared/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "orjson==3.10.18",
     "redis>=5.0.0,<6.0.0",
     "pydantic",
+    "pydantic-settings",
     "python-dotenv>=1.0.0,<2.0.0",
     "tomli==2.0.0",
 ]
