--- a/src/shared/pyproject.toml
+++ b/src/shared/pyproject.toml
@@ -10,7 +10,8 @@ dependencies = [
     "loguru>=0.7.0,<1.0.0",
     "orjson==3.10.18",
     "redis>=5.0.0,<6.0.0",
-    "pydantic",
+    "pydantic==2.10.4",
+    "pydantic-core==2.27.2",
     "pydantic-settings",
     "python-dotenv>=1.0.0,<2.0.0",
     "tomli==2.0.0",
