--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,13 +26,14 @@ services:
       context: .
       dockerfile: src/services/receiver/Dockerfile
     environment:
+      - SERVICE_NAME=receiver
+      - ENVIRONMENT=production
+      - TZ=UTC
       - REDIS_URL=redis://redis:6379
       - ERROR_NOTIFY_TELEGRAM=true
       - ERROR_NOTIFY_REDIS=true
-      - SERVICE_NAME=receiver
-      - ENVIRONMENT=production
-      - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
-      - TELEGRAM_CHAT_ID=${TELEGRAM_CHAT_ID}
+#      - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
+#      - TELEGRAM_CHAT_ID=${TELEGRAM_CHAT_ID}
     volumes: [./data:/app/data]
     depends_on: {redis: {condition: service_healthy}}
     secrets: [deribit_client_id, deribit_client_secret]
@@ -50,13 +51,20 @@ services:
       context: .
       dockerfile: src/services/distributor/Dockerfile
     environment: 
-      - REDIS_URL=redis://redis:6379
+      - SERVICE_NAME=distributor
+      - ENVIRONMENT=production
       - TZ=UTC
+      - REDIS_URL=redis://redis:6379
       - POSTGRES_HOST=postgres
       - POSTGRES_PORT=5432
       - POSTGRES_DB=trading
       - POSTGRES_USER=trading_app
       - POSTGRES_PASSWORD_FILE=/run/secrets/db_password
+      - ERROR_NOTIFY_TELEGRAM=true
+      - ERROR_NOTIFY_REDIS=true
+#      - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
+#      - TELEGRAM_CHAT_ID=${TELEGRAM_CHAT_ID}
+
     secrets: [db_password]
     depends_on: 
       redis: {condition: service_healthy}
