--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,11 +32,15 @@ services:
       - REDIS_URL=redis://redis:6379
       - ERROR_NOTIFY_TELEGRAM=true
       - ERROR_NOTIFY_REDIS=true
-#      - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
-#      - TELEGRAM_CHAT_ID=${TELEGRAM_CHAT_ID}
+      - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
+      - TELEGRAM_CHAT_ID=${TELEGRAM_CHAT_ID}
     volumes: [./data:/app/data]
     depends_on: {redis: {condition: service_healthy}}
-    secrets: [deribit_client_id, deribit_client_secret]
+    secrets: 
+      - deribit_client_id  
+      - deribit_client_secret  
+      - telegram_bot_token  
+      - telegram_chat_id   
     restart: unless-stopped
     networks: [trading-net]
     healthcheck:
@@ -62,10 +66,13 @@ services:
       - POSTGRES_PASSWORD_FILE=/run/secrets/db_password
       - ERROR_NOTIFY_TELEGRAM=true
       - ERROR_NOTIFY_REDIS=true
-#      - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
-#      - TELEGRAM_CHAT_ID=${TELEGRAM_CHAT_ID}
+      - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
+      - TELEGRAM_CHAT_ID=${TELEGRAM_CHAT_ID}
 
-    secrets: [db_password]
+    secrets: 
+      - db_password 
+      - telegram_bot_token  
+      - telegram_chat_id   
     depends_on: 
       redis: {condition: service_healthy}
       postgres: {condition: service_healthy}
@@ -113,7 +120,11 @@ secrets:
   deribit_client_secret:
     file: ./secrets/client_secret.txt
   db_password:
-    file: ./secrets/db_password.txt    
+    file: ./secrets/db_password.txt   
+  telegram_bot_token:
+    file: ./secrets/telegram_bot_token.txt
+  telegram_chat_id:
+    file: ./secrets/telegram_chat_id.txt 
 networks:
   trading-net:
     driver: bridge
