--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     volumes: [redis-data:/data]
     networks: [trading-net]
     healthcheck:
-      test: ["CMD", "redis-cli", "--raw", "ping | grep -q PONG"]
+      test: ["CMD", "redis-cli", "ping"] 
       interval: 1m
       timeout: 5s
       retries: 3
