--- a/src/shared/pyproject.toml
+++ b/src/shared/pyproject.toml
@@ -10,9 +10,9 @@ dependencies = [
     "loguru>=0.7.0,<1.0.0",
     "orjson==3.10.18",
     "redis>=5.0.0,<6.0.0",
-    "pydantic==2.11.5",
-    "pydantic-core==2.33.2",
-    "pydantic-settings",
+#    "pydantic==2.11.5",
+#    "pydantic-core==2.33.2",
+#    "pydantic-settings",
     "python-dotenv>=1.0.0,<2.0.0",
     "tomli==2.0.0",
 ]
